--- a/SkillSync/application/static/css/stylesheet.css
+++ b/SkillSync/application/static/css/stylesheet.css
@@ -24,6 +24,7 @@ main {
 a {
   color: inherit;
   text-decoration: none;
+  text-align: center;
 }
 
 img {
@@ -481,6 +482,7 @@ footer .fa-expand {
 
 .sidebar {
   width: 10vw;
+  min-width: fit-content;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -489,11 +491,11 @@ footer .fa-expand {
   justify-content: center;
 }
 
-.sidebar button {
+.sidebar button,
+.sidebar a {
   background-color: inherit;
   color: inherit;
   padding: 16px;
-  width: 100%;
   border: none;
   text-align: left;
   cursor: pointer;
@@ -501,7 +503,8 @@ footer .fa-expand {
   box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
-.sidebar button:hover {
+.sidebar button:hover,
+.sidebar a:hover {
   filter: invert(25%);
 }
 
@@ -526,13 +529,23 @@ footer .fa-expand {
   font-size: 16px;
 }
 
-.settings-form .form-group,
-.settings-form button {
+.settings-container {
+  justify-self: center;
+  align-content: center;
+}
+
+.settings-form .form-group {
+  width: 100%;
   margin: 0 0 1rem 0;
 }
 
+.settings-form .form-group,
+.settings-form button {
+  margin: 0 auto 1rem auto;
+}
+
 .settings-form textarea {
-  width: 40vw;
+  width: 100%;
   height: 20vh;
   resize: none;
 }
@@ -551,35 +564,6 @@ footer .fa-expand {
   font-size: 32px;
 }
 
-.profile-section {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 40px;
-}
-
-.profile-section h1 {
-  font-size: 48px;
-  font-weight: 700;
-  width: 70%;
-}
-
-.main-section {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 60px;
-}
-
-.main-section > div {
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
-  border-radius: 10px;
-}
-
-.main-section > div:hover {
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 1);
-}
-
 .username {
   margin: 0;
 }
@@ -588,12 +572,47 @@ footer .fa-expand {
   margin: 10px 0;
 }
 
-.overview {
-  width: 60%;
+.profile-container {
+  padding: 40px 80px;
 }
 
-.contact {
-  width: 30%;
+.profile-img {
+  width: 100px;
+  height: 100px;
+  background-color: var(--darkGrey);
+  border-radius: 50%;
+  border: 3px solid var(--black);
+  padding: 5px;
+  object-fit: cover;
+  margin: 0;
+  justify-self: center;
+}
+
+.profile-section {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+/* + DashboardPage */
+.card-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: auto 1fr;
+  grid-gap: 20px;
+  margin-bottom: 60px;
+}
+
+.card-section > div {
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  border-radius: 10px;
+}
+
+.card-section > div:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 1);
+}
+
+.card-section .overview {
+  grid-column: span 2;
 }
 
 .overview h2,
@@ -613,34 +632,10 @@ footer .fa-expand {
   text-decoration: underline;
 }
 
-.profile-container {
-  padding: 40px 80px;
-}
-
-.profile-img {
-  width: 100px;
-  height: 100px;
-  background-color: var(--darkGrey);
-  border-radius: 50%;
-  border: 3px solid var(--black);
-  padding: 5px;
-  object-fit: cover;
-  margin: 0;
-}
-
-/* DashboardPage */
 .dashboard-main {
   display: flex;
   height: 100vh;
   align-items: center;
-}
-
-.cards-section {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-  justify-items: center;
 }
 
 .card {
