--- a/SkillSync/application/templates/recursivetree.html
+++ b/SkillSync/application/templates/recursivetree.html
@@ -1,12 +1,9 @@
-{% load static %} {% load custom_tags %}
-<ul class="tree">
-    {% for key, value in jsonData.items %}
-            {% if key == "title" %}
-                <button>{{value}}</button>
-            {% elif value|is_dict %}
-                <ul>
-                    {% renderNestedDict value %}
-                </ul>
-            {% endif %}
-    {% endfor %}
+{% load static %} {% load custom_tags %} {% for key, value in jsonData.items %} {% if key == "title" %}
+<button>{{ value }}</button>
+{% elif key == "extend" and value %}
+<ul>
+  {% renderNestedDict value %}
 </ul>
+{% elif value|is_dict and value %}
+<li>{% renderNestedDict value %}</li>
+{% endif %} {% endfor %}
