--- a/SkillSync/application/templates/tree.html
+++ b/SkillSync/application/templates/tree.html
@@ -1,10 +1,11 @@
 {% extends 'main.html' %} {% load static %} {% block content%} {% include 'header.html' %} {% load custom_tags %}
 <main>
-  
   <div class="tree-container">
-      {% renderNestedDict jsonData %}
+    <ul class="tree">
+      <li>{% renderNestedDict jsonData %}</li>
+    </ul>
   </div>
-  
+
   <div class="info-panel">
     <div class="tab-container">
       <button class="tab" onclick="showTab('description')">Description</button>
