--- a/SkillSync/application/templates/tree.html
+++ b/SkillSync/application/templates/tree.html
@@ -2,6 +2,9 @@
 <main>
   <div class="tree-container">
     <ul class="tree">
+      <script>
+        const jsonData = {{ jsonData|safe }};
+      </script>
       <li>{% renderNestedDict jsonData %}</li>
     </ul>
   </div>
