Made Register User and Login Test Cases

--- a/SkillSync/application/templates/tree.html
+++ b/SkillSync/application/templates/tree.html
@@ -1,20 +1,11 @@
 {% extends 'main.html' %} {% load static %} {% block content%} {% include 'header.html' %} {% load custom_tags %}
 <main>
-  
   <div class="tree-container">
-      {% renderNestedDict jsonData %}
+      <ul class="tree">
+        {% renderNestedDict jsonData %}
+      </ul>
   </div>
-  
-  <div class="info-panel">
-    <div class="tab-container">
-      <button class="tab" onclick="showTab('description')">Description</button>
-    </div>
-    <div class="tab-content" id="descriptionTab">
-      <h3 id="infoTitle">Node Title</h3>
-      <p id="infoDescription">Node Description</p>
-    </div>
-  </div>
-</main>
+</main> 
 
 <footer>
   <i class="fa-solid fa-expand" onclick="resetScale()" title="Reset Zoom"></i>
