--- a/SkillSync/application/static/css/stylesheet.css
+++ b/SkillSync/application/static/css/stylesheet.css
@@ -667,12 +667,7 @@ footer .fa-expand {
 
 .card a {
   padding: 10px 20px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
-  background-color: inherit;
-  color: inherit;
+  margin: 5px 10px;
 }
 
 .card a:hover {
