--- a/SkillSync/application/templates/tree.html
+++ b/SkillSync/application/templates/tree.html
@@ -12,12 +12,15 @@
   <div class="info-panel">
     <div class="tab-container">
       <button class="tab" onclick="showTab('description')">Description</button>
+      <form method="post" id="toggleLeafForm" action={% url 'toggleLeaf' jsonData.title "nodeName" %}>
+        {% csrf_token %}
+        <button class="tab" type="submit">Toggle Completed State</button>
+      </form>
     </div>
     <div class="tab-content" id="descriptionTab">
       <h3 id="infoTitle">Node Title</h3>
       <p id="infoDescription">Node Description</p>
     </div>
-  </div>
 </main>
 
 <footer>
