--- a/SkillSync/application/templates/tree.html
+++ b/SkillSync/application/templates/tree.html
@@ -12,7 +12,7 @@
   <div class="info-panel">
     <div class="tab-container">
       <button class="tab" onclick="showTab('description')">Description</button>
-      <form method="post" id="toggleLeafForm" action={% url 'toggleLeaf' jsonData.title "nodeName" %}>
+      <form method="post" id="toggleLeafForm" action=""> {% comment %} The action is filled by the tree JS {% endcomment %}
         {% csrf_token %}
         <button class="tab" type="submit">Toggle Completed State</button>
       </form>
