Tree Public/Private
+ Boolean for trees to be declared public

--- a/SkillSync/application/templates/dashboard.html
+++ b/SkillSync/application/templates/dashboard.html
@@ -13,9 +13,10 @@
     <section class="card-section">
       {% if trees %} {% for tree in trees %}
       <div class="card dashboard-card">
-        <h3>{{tree.name}}</h3>
+        <h3>{{tree.name}} {% if tree.public == True %} <i class="fa-solid fa-globe" title="Public"></i> {% else %} <i class="fa-solid fa-lock" title="Private"></i> {% endif %}</h3>
         <p>{{tree.description}}</p>
         <a class="F1-button" href="{% url 'treePage' request.user.username tree.name %}">View Tree</a>
+        <a class="F2-button" href="{% url 'togglePublicTree' tree.name %}">Toggle Public/Private</a>
         <a class="F2-button" href="{% url 'deleteTree' tree.name %}">Delete Tree</a>
       </div>
       {% endfor %} {% else %}
