--- a/SkillSync/application/templates/tree.html
+++ b/SkillSync/application/templates/tree.html
@@ -12,10 +12,12 @@
   <div class="info-panel">
     <div class="tab-container">
       <button class="tab" onclick="showTab('description')">Description</button>
-      <form method="post" id="toggleLeafForm" action=""> {% comment %} The action is filled by the tree JS {% endcomment %}
-        {% csrf_token %}
-        <button class="tab" type="submit">Toggle Completed State</button>
-      </form>
+      {% if request.user == user %}
+        <form method="post" id="toggleLeafForm" action=""> {% comment %} The action is filled by the tree JS {% endcomment %}
+          {% csrf_token %}
+          <button class="tab" type="submit">Toggle Completed State</button>
+        </form>
+      {% endif %}
     </div>
     <div class="tab-content" id="descriptionTab">
       <h3 id="infoTitle">Node Title</h3>
